fef: swype indicator
